--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Three.js Learning</title>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="app"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
